estilos en scss

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link al css -->
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Camelia Objetos</title>
 </head>
 
@@ -39,7 +40,7 @@
     </header>
 
 
-    <main>
+    <main class="main-index">
         <!-- contenido principal -->
         <section>
             <div class="contenedor-productos">
@@ -82,7 +83,7 @@
         
         <nav>
             <ul>
-                S<h3 class="redes">Encontranos en Instagram</h3>
+                <h3 class="redes">Encontranos en Instagram</h3>
                 <li class="logo-insta">
                     <img src="./assets/instagram-logo-svgrepo-com.svg" alt="icono-instagram">
                     <a href="https://www.instagram.com/camelia_objetosdeco/#" target="_blank">@camelia_objetosdeco</a>
