--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../css/styles.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Camelia Objetos</title>
 </head>
 
@@ -19,7 +20,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">inicio</a>
+                    <a href="../index.html">Inicio</a>
                 </li>
                 <li>
                     <a href="./tienda.html">Tienda</a>
@@ -48,23 +49,31 @@
                 ACERCA DE NOSOTROS
             </h2>
             <P>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Minus excepturi ullam provident rerum vero, dolorum qui fuga deleniti ut ea 
-                blanditiis quia quibusdam nihil. Quasi quidem natus distinctio rem officia!
+                Objetos de decoración.🧵<br>
+                Trabajamos por pedido. ✍🏽<br>
+                Hacemos envíos. 📦<br>
+                Podes encontrarnos en: <br>
+                📍Villa Carlos Paz <br>
+                📍La Pampa
             </P>
 
             </div>
                 <aside class="perfil">
                     <h3>CAMELIA VEGA</h3>
-                    <p>descripcion del p
-                    shghsgjhgsjsgjfffhfhjh
-                    dsgbgkjsgjsgsnkjsf
-                    fskjhgjhjsfkjsggksjjhf
-                    jdshhjsdghgshdhdhkgk
-                    sdhbghsghgssgkjskgsj
-                    dsgnskjkggsnjsgkngs
-                    sjhbghsghbgsjnkgsf
-                    fhhdfgdkjfgjkkjkjfdkj
+                    <p> ¡Hola 🙌!
+                    Mi nombre es Camelia, 
+                    nací en La Pampa pero hice 
+                    Diseño de Indumentaria 
+                    en Córdoba capital,
+                    provincia en la que vivo 
+                    hace ya unos años. <br> 
+                    Ademas de este, mi emprendimiento,
+                    trabajo como diseñadora de calzados 
+                    en una fabrica local. <br>
+                    ✨💫 En eso que soñaba ando.
+                    Y la verdad no me imagino
+                    haciendo otra cosa, 💫✨
+
                     </p>
             </aside>
             <div class="recomendaciones">
