--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../css/styles.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Camelia Objetos</title>
 </head>
 
@@ -19,7 +20,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./../index.html">inicio</a>
+                    <a href="./../index.html">Inicio</a>
                 </li>
                 <li>
                     <a href="./tienda.html">Tienda</a>
