--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -20,19 +20,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">Inicio</a>
+                    <a href="../index.html">INICIO</a>
                 </li>
                 <li>
-                    <a href="./tienda.html">Tienda</a>
+                    <a href="./tienda.html">TIENDA</a>
                 </li>
                 <li>
-                    <a href="./cursos.html">Cursos</a>
+                    <a href="./cursos.html">CURSOS</a>
                 </li>
                 <li>
-                    <a href="./acerca.html">Acerca de</a>
+                    <a href="./acerca.html">NOSOTROS</a>
                 </li>
                 <li>
-                    <a href="./contacto.html">Contacto</a>
+                    <a href="./contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
@@ -43,7 +43,12 @@
 
     <main>
         <!-- contenido principal -->
-        <div class="contenedor-acerca-de">
+        <section class="banner">
+            <div class="banner-contenido">
+                <p>Conocenos</p>
+            </div>
+        </section>
+        <div class="contenedor-acerca-de" >
             <div class="contenido">
             <h2>
                 ACERCA DE NOSOTROS
@@ -109,7 +114,6 @@
             </ul>
         </nav>
     </footer>
-
 
 </body>
 
