--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -20,37 +20,99 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">Inicio</a>
+                    <a href="../index.html">INICIO</a>
                 </li>
                 <li>
-                    <a href="./tienda.html">Tienda</a>
+                    <a href="./tienda.html">TIENDA</a>
                 </li>
                 <li>
-                    <a href="./cursos.html">Cursos</a>
+                    <a href="./cursos.html">CURSOS</a>
                 </li>
                 <li>
-                    <a href="./acerca.html">Acerca de</a>
+                    <a href="./acerca.html">NOSOTROS</a>
                 </li>
                 <li>
-                    <a href="./contacto.html">Contacto</a>
+                    <a href="./contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
     </header>
 
 
-
-
     <main>
-        <!-- contenido principal -->
-        <h2 class="construccion">
-            EN CONSTRUCCION...
-        </h2>
+        <section class="banner">
+            <div class="banner-contenido">
+                <p>Tienda</p>
+            </div>
+        </section>
+        <section class="tienda">
+            <div class="item-tienda">
+                <figure>
+                    <img src="../assets/tienda-platositio.jpg" alt="producto">
+                </figure>
+                <div class="info-producto">
+                    <h2>Plato de Sitio</h2>
+                    <p class="precio">$1950</p>
+                    <button class="btn">Comprar</button>
+                </div>
+            </div>
 
+            <div class="item-tienda">
+                <figure>
+                    <img src="../assets/tienda-mantel.jpg" alt="producto">
+                </figure>
+                <div class="info-producto">
+                    <h2>Mantel</h2>
+                    <p class="precio">$3499</p>
+                    <button class="btn">Comprar</button>
+                </div>
+            </div>
+
+            <div class="item-tienda">
+                <figure>
+                    <img src="../assets/tienda-mantelmatero.jpeg" alt="producto">
+                </figure>
+                <div class="info-producto">
+                    <h2>Mantel Matero</h2>
+                    <p class="precio">$1499</p>
+                    <button class="btn">Comprar</button>
+                </div>
+            </div>
+
+            <div class="item-tienda">
+                <figure>
+                    <img src="../assets/tienda-delantal.jpg" alt="producto">
+                </figure>
+                <div class="info-producto">
+                    <h2>Delantal</h2>
+                    <p class="precio">$3299</p>
+                    <button class="btn">Comprar</button>
+                </div>
+            </div>
+
+            <div class="item-tienda">
+                <figure>
+                    <img src="../assets/tienda-alfombra.jpg" alt="producto">
+                </figure>
+                <div class="info-producto">
+                    <h2>Alfombra</h2>
+                    <p class="precio">$2299</p>
+                    <button class="btn">Comprar</button>
+                </div>
+            </div>
+
+            <div class="item-tienda">
+                <figure>
+                    <img src="../assets/tienda-portanotebook.jpg" alt="producto">
+                </figure>
+                <div class="info-producto">
+                    <h2>Porta Notebook</h2>
+                    <p class="precio">$2599</p>
+                    <button class="btn">Comprar</button>
+                </div>
+            </div>
+        </section>
     </main>
-
-
-
     
     <footer>
         <!-- redes sociales -->
